--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ __pycache__/
 *.pyc
 
 # Node
-/frontend/node_modules/
-/frontend/build/
+/frontend/my-project/node_modules/
+/frontend/my-project/build/
 
 # Secrets
 .env
